Fix: bottom sidebar because quote too large

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h2 {
 
 .quote {
   background-color: #e5e7eb;
-  padding: 100px 100px 75px 100px;
+  padding: 100px 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
